# chess-ex1-Jadf1177

Chess/: CMakeLists.txt  README.md
Chess/include/: Bishop.h  Board.h  Chess.h  ChessUnit.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  Queen.h  Rook.h
Chess/include/Pieces/: Bishop.h  Queen.h  Rook.h
Chess/src/: Bishop.cpp  Board.cpp  CMakeLists.txt  Chess.cpp  ChessUnit.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main.cpp
